# Use workspace section to allow test all cases under root folder (cargo test --all).
[workspace]
members = [
    "crates/cfx_bytes",
    "crates/cfx_types",
    "crates/cfx_addr",
    "crates/cfx_math",
    "crates/cfx_utils",
    "crates/stratum",
    "crates/accounts",
    "crates/blockgen",
    "crates/cfx_key",
    "crates/cfx_store",
    "crates/dbs/db",
    "crates/dbs/kvdb-rocksdb",
    "crates/dbs/db-errors",
    "crates/network",
    "crates/primitives",
    "crates/secret_store",
    "crates/transactiongen",
    "bins/cfx_store",
    "bins/cfx_key",
    "bins/conflux",
    "crates/cfxcore/core",
    "crates/cfxcore/execute-helper",
    "crates/cfxcore/executor",
    "crates/cfxcore/internal_common",
    "crates/cfxcore/packing-pool",
    "crates/cfxcore/parameters",
    "crates/dbs/statedb",
    "crates/dbs/storage",
    "crates/cfxcore/vm-interpreter",
    "crates/cfxcore/vm-types",
    "crates/util/cfx-vm-tracer-derive",
    "crates/util/dag",
    "crates/util/delegate",
    "crates/util/heap-map",
    "crates/util/hibitset",
    "crates/util/io",
    "crates/util/link-cut-tree",
    "crates/util/log_device",
    "crates/util/malloc_size_of",
    "crates/util/malloc_size_of_derive",
    "crates/util/memory-cache",
    "crates/util/metrics",
    "crates/util/priority-send-queue",
    "crates/util/random_crash",
    "crates/util/runtime",
    "crates/util/sha3-macro",
    "crates/util/solidity-abi",
    "crates/util/solidity-abi-derive",
    "crates/util/throttling",
    "crates/util/treap-map",
    "crates/util/version",
    "crates/serde_utils",
    "crates/cfxcore/geth-tracer",
    "crates/rpc/rpc-eth-types", 
    "crates/rpc/rpc-primitives",
    "crates/rpc/rpc-cfx-types", 
    "crates/rpc/rpc-eth-api",
    "crates/cfxcore/parity-trace-types",
    "crates/rpc/rpc",
    "crates/util/util-macros",
    "crates/rpc/rpc-utils",
]

resolver = "2"

[workspace.package]
version = "2.4.0"
authors = ["peilun-conflux", "ChenxingLi"]
description = "A rust implementation of the Conflux-Protocol"
documentation = "https://doc.confluxnetwork.org"
#edition = "2018"
homepage = "https://confluxnetwork.org/"
keywords = ["Conflux"]
repository = "https://github.com/conflux-chain/conflux-rust"
license-file = "LICENSE"

[patch.crates-io]
sqlite3-sys = { git = "https://github.com/Conflux-Chain/sqlite3-sys.git", rev = "1de8e5998f7c2d919336660b8ef4e8f52ac43844" }

[profile.test]
debug-assertions = true

[profile.test.package]
parity-secp256k1 = { opt-level = 3 }

[profile.bench]
debug-assertions = true
overflow-checks = true

[profile.release]
overflow-checks = true
# Temporarily run with debug assertion before main-net release.
debug-assertions = true

[workspace.dependencies]
cfxkey = { path = "./crates/cfx_key" }
cfx-math = { path = "./crates/cfx_math" }
solidity-abi = { path = "./crates/util/solidity-abi" }
random-crash = { path = "./crates/util/random_crash" }
memory-cache = { path = "./crates/util/memory-cache" }
priority-send-queue = { path = "./crates/util/priority-send-queue" }
heap-map = { path = "./crates/util/heap-map" }
treap-map = { path = "./crates/util/treap-map" }
hibitset = { path = "./crates/util/hibitset" }
runtime = { path = "./crates/util/runtime" }
malloc_size_of = { path = "./crates/util/malloc_size_of" }
delegate = { path = "./crates/util/delegate" }
throttling = { path = "./crates/util/throttling" }
malloc_size_of_derive = { path = "./crates/util/malloc_size_of_derive" }
link-cut-tree = { path = "./crates/util/link-cut-tree" }
sha3-macro = { path = "./crates/util/sha3-macro" }
dag = { path = "./crates/util/dag" }
cfx-vm-tracer-derive = { path = "./crates/util/cfx-vm-tracer-derive" }
parity-version = { path = "./crates/util/version" }
log-device = { path = "./crates/util/log_device" }
solidity-abi-derive = { path = "./crates/util/solidity-abi-derive" }
io = { path = "./crates/util/io" }
metrics = { path = "./crates/util/metrics" }
cfx-bytes = { path = "./crates/cfx_bytes" }
primitives = { path = "./crates/primitives" }
cfx-types = { path = "./crates/cfx_types" }
client = { path = "./crates/client" }
cfx-stratum = { path = "./crates/stratum" }
txgen = { path = "./crates/transactiongen" }
blockgen = { path = "./crates/blockgen" }
serde-utils = { path = "./crates/serde_utils" }
db = { path = "./crates/dbs/db" }
cfx-db-errors = { path = "./crates/dbs/db-errors" }
cfx-statedb = { path = "./crates/dbs/statedb" }
cfx-storage = { path = "./crates/dbs/storage" }
kvdb-rocksdb = { path = "./crates/dbs/kvdb-rocksdb" }
cfx-addr = { path = "./crates/cfx_addr" }
cfxcore-accounts = { path = "./crates/accounts" }
secret-store = { path = "./crates/secret_store" }
cfxstore = { path = "./crates/cfx_store" }
network = { path = "./crates/network" }
cfx-utils = { path = "./crates/cfx_utils" }
cfxcore = { path = "./crates/cfxcore/core" }
cfx-parameters = { path = "./crates/cfxcore/parameters" }
cfx-execute-helper = { path = "./crates/cfxcore/execute-helper" }
cfx-executor = { path = "./crates/cfxcore/executor" }
cfx-packing-pool = { path = "./crates/cfxcore/packing-pool" }
cfx-vm-interpreter = { path = "./crates/cfxcore/vm-interpreter" }
geth-tracer = { path = "./crates/cfxcore/geth-tracer" }
cfx-vm-types = { path = "./crates/cfxcore/vm-types" }
cfx-internal-common = { path = "./crates/cfxcore/internal_common" }
cfx-rpc-eth-types = { path = "./crates/rpc/rpc-eth-types" }
cfx-rpc-primitives = { path = "./crates/rpc/rpc-primitives" }
cfx-rpc-cfx-types = { path = "./crates/rpc/rpc-cfx-types" }
cfx-parity-trace-types = { path = "./crates/cfxcore/parity-trace-types" }
cfx-rpc-eth-api = { path = "./crates/rpc/rpc-eth-api" }
cfx-util-macros = { path = "./crates/util/util-macros" }
cfx-rpc = { path = "./crates/rpc/rpc" }
cfx-rpc-utils = { path = "./crates/rpc/rpc-utils" }

serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"
serde_derive = "1.0"
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
hex = "0.4.3"
rustc-hex = "2.1"

fail = "0.4.0"
thiserror = "1.0.63"
anyhow = "1.0"
error-chain = { version = "0.12" }
strum = "0.20"
strum_macros = "0.20"

# parallelism
parking_lot = "0.11"
rayon = "1.10"

# alloy & revm
alloy-sol-types = "0.7.2"
alloy-primitives = "0.7.2"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "4e22b9e" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "4e22b9e" }
revm = "8.0"

# jsonrpc framework(old)
jsonrpc-core = "15.1.0"
jsonrpc-tcp-server = "15.1.0"
jsonrpc-http-server = "15.1.0"
jsonrpc-derive = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-pubsub = "15.1.0"
jsonrpc-ws-server = "15.1.0"

# jsonrpc framework(new)
jsonrpsee = "0.24.4"

# async
async-trait = "0.1"

# crypto
fixed-hash = "0.5"
keccak-hash = "0.5"
tiny-keccak = "2.0.2"
bls-signatures = { git = "https://github.com/Conflux-Chain/bls-signatures.git", rev = "fb52187df92d27c365642cb7e7b2aaf60437cf9c", default-features = false, features = ["multicore", "blst"] }

# misc
clap = "2"
rand = "0.7"
log = "0.4"
lazy_static = "1.4"
itertools = "0.10.0"
once_cell = "1.17.1"
chrono = "=0.4.38"
byteorder = "1.2.7"
