# Use workspace section to allow test all cases under root folder (cargo test --all).
[workspace]
members = [
    "crates/cfx_bytes",
    "crates/cfx_types",
    "crates/cfx_addr",
    "crates/stratum",
    "crates/accounts",
    "crates/blockgen",
    "crates/cfx_key",
    "crates/cfx_store",
    "crates/dbs/db",
    "crates/dbs/kvdb-rocksdb",
    "crates/dbs/db-errors",
    "crates/network",
    "crates/primitives",
    "crates/secret_store",
    "crates/transactiongen",
    "bins/cfx_store",
    "bins/cfx_key",
    "bins/conflux",
    "crates/cfxcore/core",
    "crates/cfxcore/execute-helper",
    "crates/cfxcore/executor",
    "crates/cfxcore/internal_common",
    "crates/cfxcore/packing-pool",
    "crates/cfxcore/parameters",
    "crates/dbs/statedb",
    "crates/dbs/storage",
    "crates/cfxcore/vm-interpreter",
    "crates/cfxcore/vm-types",
    "crates/util/cfx_math",
    "crates/util/cfx-vm-tracer-derive",
    "crates/util/dag",
    "crates/util/delegate",
    "crates/util/heap-map",
    "crates/util/hibitset",
    "crates/util/io",
    "crates/util/link-cut-tree",
    "crates/util/log_device",
    "crates/util/malloc_size_of",
    "crates/util/malloc_size_of_derive",
    "crates/util/memory-cache",
    "crates/util/metrics",
    "crates/util/priority-send-queue",
    "crates/util/random_crash",
    "crates/util/sha3-macro",
    "crates/util/solidity-abi",
    "crates/util/solidity-abi-derive",
    "crates/util/throttling",
    "crates/util/treap-map",
    "crates/util/version",
    "crates/util/serde_utils",
    "crates/cfxcore/geth-tracer",
    "crates/rpc/rpc-eth-types",
    "crates/rpc/rpc-primitives",
    "crates/rpc/rpc-cfx-types",
    "crates/rpc/rpc-eth-api",
    "crates/cfxcore/parity-trace-types",
    "crates/rpc/rpc-eth-impl",
    "crates/util/util-macros",
    "crates/rpc/rpc-utils",
    "crates/rpc/rpc-builder",
    "crates/rpc/rpc-cfx-impl",
    "crates/pos/common/bounded-executor",
    "crates/pos/common/crash-handler",
    "crates/pos/common/fallible",
    "crates/pos/common/infallible",
    "crates/pos/common/logger",
    "crates/pos/common/metrics",
    "crates/pos/common/metrics-core",
    "crates/pos/common/nibble",
    "crates/pos/common/num-variants",
    "crates/pos/common/proptest-helpers",
    "crates/pos/common/proxy",
    "crates/pos/common/short-hex-str",
    "crates/pos/common/subscription-service",
    "crates/pos/common/temppath",
    "crates/pos/common/time-service",
    "crates/pos/config/generate-key",
    "crates/pos/config/global-constants",
    "crates/pos/consensus/consensus-types",
    "crates/pos/config/config",
    "crates/pos/consensus/executor",
    "crates/pos/consensus/safety-rules",
    "crates/pos/crypto/crypto",
    "crates/pos/crypto/crypto-derive",
    "crates/pos/secure/net",
    "crates/pos/secure/push-metrics",
    "crates/pos/secure/storage",
    "crates/pos/storage/accumulator",
    "crates/pos/storage/cached-pos-ledger-db",
    "crates/pos/storage/jellyfish-merkle",
    "crates/pos/storage/pos-ledger-db",
    "crates/pos/storage/schemadb",
    "crates/pos/storage/scratchpad",
    "crates/pos/storage/state-view",
    "crates/pos/storage/storage-interface",
    "crates/pos/types/executor-types",
    "crates/pos/types/move-core-types",
    "crates/pos/types/pow-types",
    "crates/pos/types/types",
    "crates/pos/config/management/network-address-encryption",
]

resolver = "2"

[workspace.package]
version = "2.4.0"
authors = ["peilun-conflux", "ChenxingLi"]
description = "A rust implementation of the Conflux-Protocol"
documentation = "https://doc.confluxnetwork.org"
#edition = "2018"
homepage = "https://confluxnetwork.org/"
keywords = ["Conflux"]
repository = "https://github.com/conflux-chain/conflux-rust"
license-file = "LICENSE"

[patch.crates-io]
sqlite3-sys = { git = "https://github.com/Conflux-Chain/sqlite3-sys.git", rev = "1de8e5998f7c2d919336660b8ef4e8f52ac43844" }

[profile.test]
debug-assertions = true

[profile.test.package]
parity-secp256k1 = { opt-level = 3 }

[profile.bench]
debug-assertions = true
overflow-checks = true

[profile.release]
overflow-checks = true
# Temporarily run with debug assertion before main-net release.
debug-assertions = true

[workspace.dependencies]
cfxkey = { path = "./crates/cfx_key" }
cfx-math = { path = "./crates/util/cfx_math" }
solidity-abi = { path = "./crates/util/solidity-abi" }
random-crash = { path = "./crates/util/random_crash" }
memory-cache = { path = "./crates/util/memory-cache" }
priority-send-queue = { path = "./crates/util/priority-send-queue" }
heap-map = { path = "./crates/util/heap-map" }
treap-map = { path = "./crates/util/treap-map" }
hibitset = { path = "./crates/util/hibitset" }
malloc_size_of = { path = "./crates/util/malloc_size_of" }
delegate = { path = "./crates/util/delegate" }
throttling = { path = "./crates/util/throttling" }
malloc_size_of_derive = { path = "./crates/util/malloc_size_of_derive" }
link-cut-tree = { path = "./crates/util/link-cut-tree" }
sha3-macro = { path = "./crates/util/sha3-macro" }
dag = { path = "./crates/util/dag" }
cfx-vm-tracer-derive = { path = "./crates/util/cfx-vm-tracer-derive" }
parity-version = { path = "./crates/util/version" }
log-device = { path = "./crates/util/log_device" }
solidity-abi-derive = { path = "./crates/util/solidity-abi-derive" }
io = { path = "./crates/util/io" }
metrics = { path = "./crates/util/metrics" }
cfx-bytes = { path = "./crates/cfx_bytes" }
primitives = { path = "./crates/primitives" }
cfx-types = { path = "./crates/cfx_types" }
client = { path = "./crates/client" }
cfx-stratum = { path = "./crates/stratum" }
txgen = { path = "./crates/transactiongen" }
blockgen = { path = "./crates/blockgen" }
serde-utils = { path = "./crates/util/serde_utils" }
db = { path = "./crates/dbs/db" }
cfx-db-errors = { path = "./crates/dbs/db-errors" }
cfx-statedb = { path = "./crates/dbs/statedb" }
cfx-storage = { path = "./crates/dbs/storage" }
kvdb-rocksdb = { path = "./crates/dbs/kvdb-rocksdb" }
cfx-addr = { path = "./crates/cfx_addr" }
cfxcore-accounts = { path = "./crates/accounts" }
secret-store = { path = "./crates/secret_store" }
cfxstore = { path = "./crates/cfx_store" }
network = { path = "./crates/network" }
cfxcore = { path = "./crates/cfxcore/core" }
cfx-parameters = { path = "./crates/cfxcore/parameters" }
cfx-execute-helper = { path = "./crates/cfxcore/execute-helper" }
cfx-executor = { path = "./crates/cfxcore/executor" }
cfx-packing-pool = { path = "./crates/cfxcore/packing-pool" }
cfx-vm-interpreter = { path = "./crates/cfxcore/vm-interpreter" }
geth-tracer = { path = "./crates/cfxcore/geth-tracer" }
cfx-vm-types = { path = "./crates/cfxcore/vm-types" }
cfx-internal-common = { path = "./crates/cfxcore/internal_common" }
cfx-rpc-eth-types = { path = "./crates/rpc/rpc-eth-types" }
cfx-rpc-primitives = { path = "./crates/rpc/rpc-primitives" }
cfx-rpc-cfx-types = { path = "./crates/rpc/rpc-cfx-types" }
cfx-parity-trace-types = { path = "./crates/cfxcore/parity-trace-types" }
cfx-rpc-eth-api = { path = "./crates/rpc/rpc-eth-api" }
cfx-util-macros = { path = "./crates/util/util-macros" }
cfx-rpc = { path = "./crates/rpc/rpc-eth-impl" }
cfx-rpc-utils = { path = "./crates/rpc/rpc-utils" }
cfx-rpc-builder = { path = "./crates/rpc/rpc-builder" }
cfx-rpc-cfx-impl = { path = "./crates/rpc/rpc-cfx-impl" }
bounded-executor = { path = "./crates/pos/common/bounded-executor" }
diem-channel = { path = "./crates/pos/common/channel", package = "channel" }
channel = { path = "./crates/pos/common/channel" }
crash-handler = { path = "./crates/pos/common/crash-handler" }
fallible = { path = "./crates/pos/common/fallible" }
diem-infallible = { path = "./crates/pos/common/infallible" }
diem-logger = { path = "./crates/pos/common/logger" }
diem-metrics = { path = "./crates/pos/common/metrics" }
diem-metrics-core = { path = "./crates/pos/common/metrics-core" }
diem-nibble = { path = "./crates/pos/common/nibble" }
num-variants = { path = "./crates/pos/common/num-variants" }
diem-proptest-helpers = { path = "./crates/pos/common/proptest-helpers" }
proxy = { path = "./crates/pos/common/proxy" }
short-hex-str = { path = "./crates/pos/common/short-hex-str" }
subscription-service = { path = "./crates/pos/common/subscription-service" }
diem-temppath = { path = "./crates/pos/common/temppath" }
diem-time-service = { path = "./crates/pos/common/time-service" }
generate-key = { path = "./crates/pos/config/generate-key" }
diem-global-constants = { path = "./crates/pos/config/global-constants" }
diem-config = { path = "./crates/pos/config/config" }
consensus-types = { path = "./crates/pos/consensus/consensus-types" }
executor = { path = "./crates/pos/consensus/executor" }
safety-rules = { path = "./crates/pos/consensus/safety-rules" }
diem-crypto = { path = "./crates/pos/crypto/crypto" }
diem-crypto-derive = { path = "./crates/pos/crypto/crypto-derive" }
diem-secure-net = { path = "./crates/pos/secure/net" }
diem-secure-push-metrics = { path = "./crates/pos/secure/push-metrics" }
diem-secure-storage = { path = "./crates/pos/secure/storage" }
accumulator = { path = "./crates/pos/storage/accumulator" }
cached-pos-ledger-db = { path = "./crates/pos/storage/cached-pos-ledger-db" }
diem-jellyfish-merkle = { path = "./crates/pos/storage/jellyfish-merkle" }
pos-ledger-db = { path = "./crates/pos/storage/pos-ledger-db" }
schemadb = { path = "./crates/pos/storage/schemadb" }
scratchpad = { path = "./crates/pos/storage/scratchpad" }
diem-state-view = { path = "./crates/pos/storage/state-view" }
storage-client = { path = "./crates/pos/storage/storage-client" }
storage-interface = { path = "./crates/pos/storage/storage-interface" }
executor-types = { path = "./crates/pos/types/executor-types" }
move-core-types = { path = "./crates/pos/types/move-core-types" }
pow-types = { path = "./crates/pos/types/pow-types" }
diem-types = { path = "./crates/pos/types/types" }
diem-network-address-encryption = { path = "./crates/pos/config/management/network-address-encryption" }
# proc-macros
proc-macro2 = "1.0"
quote = "1.0"

serde = { version = "1.0", features = [
    "derive",
    "alloc",
], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = { version = "1.0", default-features = false }
hex = "0.4.3"
rustc-hex = "2.1"
hex-literal = "0.4.1"

fail = "0.4.0"
thiserror = "1.0.63"
anyhow = "1.0"

# parallelism
parking_lot = "0.11"
rayon = "1.10"
threadpool = "1.7"

# alloy & revm
alloy-sol-types = "0.7.2"
alloy-primitives = "0.7.2"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "4e22b9e" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "4e22b9e" }
revm = "8.0"

# jsonrpc framework(old)
jsonrpc-core = "18.0.0"
jsonrpc-tcp-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-ws-server = "18.0.0"

# jsonrpc framework(new)
jsonrpsee = "0.24.4"
jsonrpsee-core = "0.24"
jsonrpsee-types = "0.24"

http = "1.0"

# async
tokio = "1.40"
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
tokio-test = "0.4.1"
tokio-io = "0.1"
futures = "0.3.30"
futures-core = "0.3"
futures-util = "0.3"
hyper = "1.3"
hyper-util = "0.1.5"
async-stream = "0.3"
async-trait = "0.1"
async-oneshot = "0.5.0"
tower = "0.4"
tower-http = "0.5"
reqwest = { version = "0.12", default-features = false }
pin-project = "1.0.12"
mio = "0.6.8"
tracing-futures = "0.2"
# old version tokio 0.2
tokio02 = { version = "0.2", package = "tokio", features = ["full"] }
tokio01 = { version = "0.1", package = "tokio" }

# crypto & hash
fixed-hash = "0.5"
keccak-hash = "0.5"
tiny-keccak = "2.0.2"
bls-signatures = { git = "https://github.com/Conflux-Chain/bls-signatures.git", rev = "fb52187df92d27c365642cb7e7b2aaf60437cf9c", default-features = false, features = [
    "multicore",
    "blst",
] }
secp256k1 = "0.30.0"

# misc
clap = "2"
rand = "0.7"
rand_xorshift = "0.2"
rand_08 = { package = "rand", version = "0.8"}
log = "0.4"
log4rs = "1.2.0"
env_logger = "0.11"
lazy_static = "1.4"
itertools = "0.10.0"
once_cell = "1.17.1"
chrono = "=0.4.38"
byteorder = "1.2.7"
strum = "0.26"
strum_macros = "0.26"
bytes = "1.9"
toml = "0.5.8"
textwrap = "0.9"
app_dirs = "1.2.1"
slab = "0.4"
tempdir = "0.3"
rpassword = "5.0.1"
static_assertions = "1.1.0"
transient-hashmap = "0.4"

bigdecimal = "0.1.0"
num-bigint = "0.2.6"
edit-distance = "2"
zeroize = "1"
docopt = "1.0"
vergen = "7.0.0"
target_info = "0.1"
libc = "0.2"

# conflux forked crates
rocksdb = { git = "https://github.com/Conflux-Chain/rust-rocksdb.git", rev = "3773afe5b953997188f37c39308105b5deb0faac" }

# parity crates
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1" }
panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1" }
dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1" }
unexpected = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1" }
ethereum-types = "0.9"
parity-wordlist = "1.3.0"
parity-crypto = "0.9.0"
parity-path = "0.1"
parity-util-mem = { version = "0.5", default-features = false }
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git", rev = "b523017108bb2d571a7a69bd97bc406e63bc7a9d" }
substrate-bn = { git = "https://github.com/paritytech/bn", rev = "63f8c587356a67b33c7396af98e065b66fca5dda", default-features = false }
