[project]
name="conflux-rust-tests"
version="0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cfx-account",
    "eth-utils",
    "py-ecc",
    "rlp",
    "trie",
    "coincurve",
    "safe-pysha3",
    "conflux-web3==1.4.4",
    "web3",
    "jsonrpcclient==4.0.3",
    "requests",
    "asyncio",
    "websockets>=15.0.1",
    "pyyaml",
    "numpy",
    "pytest",
    "pytest-xdist",
    "setuptools", # setuptools is required as uv pip sync will remove packages not listed in the requirements.txt
    "ethereum-spec-evm-resolver",
    "ethereum-execution-spec-tests",
]

[tool.uv.sources]
ethereum-spec-evm-resolver = { git = "https://github.com/petertdavies/ethereum-spec-evm-resolver.git", rev = "0e5609737ce4f86dc98cca1a5cf0eb64b8cddef2" }
ethereum-execution-spec-tests = { git = "https://github.com/ethereum/execution-spec-tests.git", rev = "971214c0832f656b7250eb71cf0b7bcba96c3f49" }
