[project]
name="conflux-rust-tests"
version="0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cfx-account",
    "eth-utils",
    "py-ecc",
    "rlp",
    "trie",
    "coincurve",
    "safe-pysha3",
    "conflux-web3==1.4.4",
    "web3",
    "jsonrpcclient==4.0.3",
    "requests",
    "asyncio",
    "websockets>=15.0.1",
    "solc-select==1.2.0",
    "pyyaml",
    "numpy",
    "pytest",
    "pytest-xdist",
    "setuptools", # setuptools is required as uv pip sync will remove packages not listed in the requirements.txt
    "ethereum-spec-evm-resolver",
    "ethereum-execution-spec-tests",
]

[tool.uv.sources]
ethereum-execution-spec-tests = { git = "https://github.com/ethereum/execution-spec-tests.git", rev = "fb4348d6707c6290e42042944e1d6d5637e91c9f" }
