[package]
description = "Conflux Account Management"
homepage = "http://conflux-chain.org"
license = "GPL-3.0"
name = "cfxcore-accounts"
version = "0.1.0"
authors = ["Conflux Foundation"]
edition = "2018"

[dependencies]
cfxkey = { path = "cfxkey" }
cfxstore = { path = "cfxstore" }
log = "0.4"
parking_lot = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
ethereum-types = "0.8"
tempdir = "0.3"
